Replace deprecated \`new Locale(...)\` with \`Locale.of(...)\` in `InputSignatureTest` (#567)
Resolves the `java/deprecated-call` CodeQL alert introduced by #564. Java 19+
ships `Locale.of(language, country)` as the non-deprecated replacement; this
project's Java 25 toolchain has it. Behavior unchanged—same Turkish locale
used to lock dtype identifier lower-casing to ASCII.